cleanup minimal repro and use an env var instead of manual code editing to set transformer log level

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -81,6 +81,9 @@
       "runtimeArgs": [
         "test"
       ],
+      "env": {
+        "LOG_TRANSFORMER_IN_TESTS": "1"
+      },
       "outFiles": [
         "${workspaceFolder}/core/{backend,transformer}/lib/**/*.js"
       ]
