--- a/presentation/components/package.json
+++ b/presentation/components/package.json
@@ -54,6 +54,7 @@
     "fast-sort": "^3.0.2",
     "micro-memoize": "^4.0.9",
     "react-select": "3.2.0",
+    "react-select-async-paginate": "0.5.3",
     "rxjs": "^6.6.2"
   },
   "peerDependencies": {
