BoxProps.origin -> baseOrigin
(cherry picked from commit 5150ea0f30102bba3c9a527efc4f6b4755689988)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,7 +48,7 @@
         "test"
       ],
       "outFiles": [
-        "${workspaceFolder}/core/{backend,common}/lib/**/*.js"
+        "${workspaceFolder}/core/{backend,common,geometry}/lib/**/*.js"
       ]
     },
     {
