--- a/.github/workflows/status-check-override.yaml
+++ b/.github/workflows/status-check-override.yaml
@@ -9,7 +9,6 @@
 name: Skip Check
 
 on:
-  # workflow_dispatch:   # Allows you to run this workflow manually from the Actions tab
   pull_request:
     branches:
       - master
@@ -19,11 +18,6 @@ on:
       - docs/**
       - .github/CODEOWNERS
 
-env:
-  documentation_files: false
-  non_documentation_files: false
-  documentation_files_only: false
-
 jobs:
   detect-if-skip:
     name: Detect If Skip
@@ -32,61 +26,29 @@ jobs:
       - uses: actions/checkout@v3
 
       # Check for certain paths having been modified
-      - name: Path filter
-        uses: dorny/paths-filter@v2   # See https://github.com/marketplace/actions/paths-changes-filter
-        id: path_filter
+      - name: Get specific changed files
+        id: changed-files-specific
+        uses: tj-actions/changed-files@v29.0.2    # See https://github.com/marketplace/actions/changed-files
         with:
-          filters: |
-            documentation_files:
-              - "docs/**"
-              - "**.md"
-              - ".github/CODEOWNERS"
-            non_md:
-              - "**/!(*.md)"
-            non_doc_folder:
-              - "!(docs/**)"
-            non_codeowners:
-              - "!(.github/CODEOWNERS)"
-
-      # Set variables
-      - name: "Set Variable: documentation_files"
-        run: |
-          echo documentation_files=${{
-            steps.path_filter.outputs.documentation_files == 'true' }} >> $GITHUB_ENV
-
-      - name: "Set Variable: non_documentation_files"
-        run: |
-          echo non_documentation_files=${{
-            steps.path_filter.outputs.non_md == 'true' &&
-            steps.path_filter.outputs.non_doc_folder == 'true' &&
-            steps.path_filter.outputs.non_codeowners == 'true' }} >> $GITHUB_ENV
-
-      - name: "Set Variable: documentation_files_only"
-        run: |
-          echo documentation_files_only=${{
-            env.documentation_files == 'true' && !(env.non_documentation_files == 'true') }} >> $GITHUB_ENV
-
-      # For debugging
-      - name: Print variables
-        run: |
-          echo documentation_files=${{env.documentation_files}}
-          echo non_documentation_files=${{env.non_documentation_files}}
-          echo documentation_files_only=${{env.documentation_files_only}}
+          files: |
+            **/*.md
+            docs/**
+            .github/CODEOWNERS
 
       # Fake required checks if neccessary
       - uses: LouisBrunner/checks-action@v1.3.0   # See https://github.com/marketplace/actions/github-checks
-        if: ${{ env.documentation_files_only == 'true' }}   # when to create status
+        if: steps.changed-files-specific.outputs.only_modified == 'true'
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          name: extract-api   # name of the status check to simulate
+          name: extract-api
           conclusion: success
 
       # Add more status checks below if necessary
 
       # TEMPLATE
       # - uses: LouisBrunner/checks-action@v1.3.0
-      #   if: ${{ env.documentation_files_only == 'true' }}   # when to create status
+      #   if: steps.changed-files-specific.outputs.only_modified == 'true'
       #   with:
       #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     name: <name-of-any-status-check-to-simulate>   # name of the status check to simulate
+      #     name: <name-of-any-status-check-to-simulate>
       #     conclusion: success
