--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -59,10 +59,12 @@
       condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
     - template: ../templates/core-build.yaml
+      parameter:
+        workingDir: $(System.DefaultWorkingDirectory)/itwinjs-core
 
     # Will run if even there is a failure somewhere else in the pipeline.
-    - template: ../templates/publish-test-results.yaml
-      parameters:
-        NodeVersion: $(nodeVersion)
+#     - template: ../templates/publish-test-results.yaml
+#       parameters:
+#         NodeVersion: $(nodeVersion)
     # The publish script identifies any new packages not previously published and tags the build
-    - template: ../templates/publish.yaml
+#     - template: ../templates/publish.yaml
