--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -61,7 +61,8 @@
     - template: ../templates/core-build.yaml
       parameters:
         workingDir: $(System.DefaultWorkingDirectory)/iTwin/itwinjs-core 
-
+    
+    - script: ls $(System.DefaultWorkingDirectory)
     # Will run if even there is a failure somewhere else in the pipeline.
 #     - template: ../templates/publish-test-results.yaml
 #       parameters:
