--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -36,6 +36,8 @@
     - checkout: iTwinjs-core-templates #FIXME, branch name must be the same on both native and TS side
       clean: true
       
+    - script: ls $(System.DefaultWorkingDirectory)
+      
     - task: NodeTool@0
       displayName: "Use Node $(nodeVersion)"
       inputs:
@@ -60,9 +62,8 @@
 
     - template: ../templates/core-build.yaml
       parameters:
-        workingDir: $(System.DefaultWorkingDirectory)/iTwin/itwinjs-core 
+        workingDir: $(System.DefaultWorkingDirectory)/iTwin/
     
-    - script: ls $(System.DefaultWorkingDirectory)
     # Will run if even there is a failure somewhere else in the pipeline.
 #     - template: ../templates/publish-test-results.yaml
 #       parameters:
