comment about ADO vs Github Actions status checks

--- a/.github/workflows/status-check-override.yaml
+++ b/.github/workflows/status-check-override.yaml
@@ -5,6 +5,10 @@
 #
 # This config will fake successful status checks for such events when it detects
 # *only* documentation changes in a pull request.
+#
+# Note: When Azure Pipeline builds (triggered by Azure DevOps webhooks) skip running due to
+# path exclusions, their status checks are set neutral by Azure DevOps. This satisfies
+# GitHub's "required" check and thus these status checks do not need to be faked below. 
 
 name: Skip Check
 
