--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -136,7 +136,7 @@
     },
     {
       "name": "@itwin/core-backend",
-      "allowedCategories": [ "backend", "common", "edit", "integration-testing", "internal", "tools" ]
+      "allowedCategories": [ "backend", "edit", "integration-testing", "internal", "tools" ]
     },
     {
       "name": "@itwin/core-bentley",
@@ -332,7 +332,7 @@
     },
     {
       "name": "@itwin/projects-client",
-      "allowedCategories": [ "common", "integration-testing", "internal" ]
+      "allowedCategories": [ "integration-testing", "internal" ]
     },
     {
       "name": "@itwin/reality-data-client",
@@ -429,10 +429,6 @@
     {
       "name": "@xmldom/xmldom",
       "allowedCategories": [ "backend", "common", "tools" ]
-    },
-    {
-      "name": "agentkeepalive",
-      "allowedCategories": [ "common" ]
     },
     {
       "name": "almost-equal",
@@ -548,7 +544,7 @@
     },
     {
       "name": "deep-assign",
-      "allowedCategories": [ "backend", "common", "frontend" ]
+      "allowedCategories": [ "backend", "frontend" ]
     },
     {
       "name": "deep-equal",
@@ -680,11 +676,7 @@
     },
     {
       "name": "fs-extra",
-      "allowedCategories": [ "backend", "common", "internal", "tools" ]
-    },
-    {
-      "name": "fs-write-stream-atomic",
-      "allowedCategories": [ "common" ]
+      "allowedCategories": [ "backend", "internal", "tools" ]
     },
     {
       "name": "fuse.js",
@@ -693,10 +685,6 @@
     {
       "name": "glob",
       "allowedCategories": [ "backend", "frontend", "internal", "tools" ]
-    },
-    {
-      "name": "got",
-      "allowedCategories": [ "common" ]
     },
     {
       "name": "https-browserify",
@@ -772,7 +760,7 @@
     },
     {
       "name": "lodash",
-      "allowedCategories": [ "backend", "common", "frontend", "tools" ]
+      "allowedCategories": [ "backend", "frontend", "tools" ]
     },
     {
       "name": "lolex",
@@ -812,7 +800,7 @@
     },
     {
       "name": "nock",
-      "allowedCategories": [ "common", "internal" ]
+      "allowedCategories": [ "internal" ]
     },
     {
       "name": "nodemon",
@@ -855,16 +843,12 @@
       "allowedCategories": [ "internal" ]
     },
     {
-      "name": "proper-lockfile",
-      "allowedCategories": [ "common" ]
-    },
-    {
       "name": "puppeteer",
       "allowedCategories": [ "integration-testing", "tools" ]
     },
     {
       "name": "qs",
-      "allowedCategories": [ "backend", "common", "frontend" ]
+      "allowedCategories": [ "backend", "frontend" ]
     },
     {
       "name": "raf",
@@ -905,10 +889,6 @@
     {
       "name": "react-dom",
       "allowedCategories": [ "extensions", "frontend", "internal" ]
-    },
-    {
-      "name": "react-dom-instance",
-      "allowedCategories": [ "frontend" ]
     },
     {
       "name": "react-highlight-words",
@@ -1020,7 +1000,7 @@
     },
     {
       "name": "superagent",
-      "allowedCategories": [ "backend", "common", "frontend" ]
+      "allowedCategories": [ "backend", "frontend" ]
     },
     {
       "name": "supertest",
