--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -136,7 +136,7 @@
     },
     {
       "name": "@itwin/core-backend",
-      "allowedCategories": [ "backend", "edit", "integration-testing", "internal", "tools" ]
+      "allowedCategories": [ "backend", "common", "edit", "integration-testing", "internal", "tools" ]
     },
     {
       "name": "@itwin/core-bentley",
@@ -332,7 +332,7 @@
     },
     {
       "name": "@itwin/projects-client",
-      "allowedCategories": [ "integration-testing", "internal" ]
+      "allowedCategories": [ "common", "integration-testing", "internal" ]
     },
     {
       "name": "@itwin/reality-data-client",
@@ -429,6 +429,10 @@
     {
       "name": "@xmldom/xmldom",
       "allowedCategories": [ "backend", "common", "tools" ]
+    },
+    {
+      "name": "agentkeepalive",
+      "allowedCategories": [ "common" ]
     },
     {
       "name": "almost-equal",
@@ -544,7 +548,7 @@
     },
     {
       "name": "deep-assign",
-      "allowedCategories": [ "backend", "frontend" ]
+      "allowedCategories": [ "backend", "common", "frontend" ]
     },
     {
       "name": "deep-equal",
@@ -676,7 +680,11 @@
     },
     {
       "name": "fs-extra",
-      "allowedCategories": [ "backend", "internal", "tools" ]
+      "allowedCategories": [ "backend", "common", "internal", "tools" ]
+    },
+    {
+      "name": "fs-write-stream-atomic",
+      "allowedCategories": [ "common" ]
     },
     {
       "name": "fuse.js",
@@ -685,6 +693,10 @@
     {
       "name": "glob",
       "allowedCategories": [ "backend", "frontend", "internal", "tools" ]
+    },
+    {
+      "name": "got",
+      "allowedCategories": [ "common" ]
     },
     {
       "name": "https-browserify",
@@ -760,7 +772,7 @@
     },
     {
       "name": "lodash",
-      "allowedCategories": [ "backend", "frontend", "tools" ]
+      "allowedCategories": [ "backend", "common", "frontend", "tools" ]
     },
     {
       "name": "lolex",
@@ -800,7 +812,7 @@
     },
     {
       "name": "nock",
-      "allowedCategories": [ "internal" ]
+      "allowedCategories": [ "common", "internal" ]
     },
     {
       "name": "nodemon",
@@ -843,12 +855,16 @@
       "allowedCategories": [ "internal" ]
     },
     {
+      "name": "proper-lockfile",
+      "allowedCategories": [ "common" ]
+    },
+    {
       "name": "puppeteer",
       "allowedCategories": [ "integration-testing", "tools" ]
     },
     {
       "name": "qs",
-      "allowedCategories": [ "backend", "frontend" ]
+      "allowedCategories": [ "backend", "common", "frontend" ]
     },
     {
       "name": "raf",
@@ -889,6 +905,10 @@
     {
       "name": "react-dom",
       "allowedCategories": [ "extensions", "frontend", "internal" ]
+    },
+    {
+      "name": "react-dom-instance",
+      "allowedCategories": [ "frontend" ]
     },
     {
       "name": "react-highlight-words",
@@ -1000,7 +1020,7 @@
     },
     {
       "name": "superagent",
-      "allowedCategories": [ "backend", "frontend" ]
+      "allowedCategories": [ "backend", "common", "frontend" ]
     },
     {
       "name": "supertest",
