--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -47,6 +47,7 @@
     - script: |
         git config --local user.email imodeljs-admin@users.noreply.github.com
         git config --local user.name imodeljs-admin
+        node -e "console.log(require('os').tmpdir())"
       displayName: git config
 
     - powershell: |
