--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -36,7 +36,7 @@
     - checkout: iTwinjs-core-templates #FIXME, branch name must be the same on both native and TS side
       clean: true
       
-    - script: dir $(System.DefaultWorkingDirectory)
+    - script: dir $(System.DefaultWorkingDirectory)/common/temp
       
     - task: NodeTool@0
       displayName: "Use Node $(nodeVersion)"
