--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,7 +46,7 @@
         "test"
       ],
       "outFiles": [
-        "${workspaceFolder}/core/{backend,common}/lib/**/*.js"
+        "${workspaceFolder}/core/{backend,common,geometry}/lib/**/*.js"
       ]
     },
     {
