Forego full suite of CI builds for documentation-only changes (#4220)
* add workflow for overriding status checks

* skip certain CI builds for documentation-only changes

* add codeowners files to exclusion list

* replace dorny/paths-filter action with tj-actions/changed-files

* let docs CI build run for documentation only changes

* comment about ADO vs Github Actions status checks

Co-authored-by: Matthew Jordan <14913576+mattbjordan@users.noreply.github.com>

--- a/.github/workflows/extract-api.yaml
+++ b/.github/workflows/extract-api.yaml
@@ -8,6 +8,10 @@ on:
     branches:
       - master
       - release/*
+    paths-ignore:
+      - "**.md"
+      - docs/**
+      - .github/CODEOWNERS
 
 jobs:
   extract-api:
