--- a/common/config/azure-pipelines/integration-pr-validation.yaml
+++ b/common/config/azure-pipelines/integration-pr-validation.yaml
@@ -16,6 +16,11 @@ pr:
     include:
       - master
       - release/*
+  paths:
+    exclude:
+      - "**.md"
+      - docs/**
+      - .github/CODEOWNERS
 
 variables:
   - group: iTwin.js non-secret config variables
