--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -1,6 +1,4 @@
-parameters:
-- name: branch
-  default: $(Build.SourceBranchName)
+# parameters:
 #   nodeVersion: ''
 
 # jobs:
@@ -33,18 +31,11 @@ parameters:
 
 #   workspace:
 #     clean: all
-resources:
-  repositories:
-    - repository: iTwinjs-core-pr-branch
-      type: github
-      name: iTwin/itwinjs-core
-      ref: ${{ parameters.branch }} # change to master after this branch is merged
-      endpoint: iTwin
-
 
   steps:
-    - checkout: iTwinjs-core-pr-branch #FIXME, branch name must be the same on both native and TS side
+    - checkout: iTwinjs-core-templates #FIXME, branch name must be the same on both native and TS side
 #       clean: true
+    - script: git checkout $(Build.SourceBranchName)
       
     - task: NodeTool@0
       displayName: "Use Node $(nodeVersion)"
