--- a/test-apps/display-test-app/ios/imodeljs-test-app/imodeljs-test-app/Info.plist
+++ b/test-apps/display-test-app/ios/imodeljs-test-app/imodeljs-test-app/Info.plist
@@ -114,6 +114,7 @@
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
+					<string>ibim</string>
 					<string>bim</string>
 				</array>
 				<key>public.mime-type</key>
