--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -34,7 +34,7 @@ steps:
     env:
       RUSH_BUILD_CACHE_CREDENTIAL: $(RushBuildCacheSAS)
       RUSH_BUILD_CACHE_ENABLED: ${{parameters.rushBuildCacheEnabled}}
-      ${{ if eq(variables.shouldWriteToCache, true) }}:
+      ${{ if and(eq(variables['Agent.OS'], 'Linux'), in(variables['Build.Reason'], 'IndividualCI', 'Manual')) }}:
         RUSH_BUILD_CACHE_WRITE_ALLOWED: 1
       ${{ else }}:
         RUSH_BUILD_CACHE_WRITE_ALLOWED: 0
