--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -34,8 +34,8 @@ steps:
     env:
       RUSH_BUILD_CACHE_CREDENTIAL: $(RushBuildCacheSAS)
       RUSH_BUILD_CACHE_ENABLED: ${{parameters.rushBuildCacheEnabled}}
-      RUSH_BUILD_CACHE_WRITE_ALLOWED: 1
-
+      ${{ if and(eq(variables['Agent.OS'], 'Linux'), in(variables['Build.Reason'], 'IndividualCI', 'Manual')) }}:
+        RUSH_BUILD_CACHE_WRITE_ALLOWED: 1
 
   - script: node common/scripts/install-run-rush.js build -v -p max
     displayName: rush build
