Move react rules out of itwinjs-recommended (#4150)
* move react rules out of itwinjs-recommended

* fix some lint errors

Co-authored-by: Paul Connelly <22944042+pmconne@users.noreply.github.com>
Co-authored-by: Caleb Shafer <31107829+calebmshafer@users.noreply.github.com>

--- a/extensions/map-layers/package.json
+++ b/extensions/map-layers/package.json
@@ -111,7 +111,7 @@
     "plugins": [
       "@itwin"
     ],
-    "extends": "plugin:@itwin/itwinjs-recommended"
+    "extends": "plugin:@itwin/ui"
   },
   "mocha": {
     "require": [
