Rename files, add comments.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -943,39 +943,39 @@
       ]
     },
     { /* PARTIAL */
-    "name": "[BACKEND] appui-test-app/standalone (chrome)",
-    "presentation": {
-      "hidden": true
+      "name": "[BACKEND] appui-test-app/standalone (chrome)",
+      "presentation": {
+        "hidden": true
+      },
+      "cwd": "${workspaceFolder}/test-apps/appui-test-app/standalone",
+      "type": "pwa-node",
+      "request": "launch",
+      "program": "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/backend/main.js",
+      "outFiles": [
+        "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/**/*.js",
+        "${workspaceFolder}/{core,clients,editor,presentation}/*/lib/**/*.js"
+      ],
+      "cascadeTerminateToConfigurations": [
+        "[FRONTEND] appui-test-app/standalone (chrome)"
+      ]
     },
-    "cwd": "${workspaceFolder}/test-apps/appui-test-app/standalone",
-    "type": "pwa-node",
-    "request": "launch",
-    "program": "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/backend/main.js",
-    "outFiles": [
-      "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/**/*.js",
-      "${workspaceFolder}/{core,clients,editor,presentation}/*/lib/**/*.js"
-    ],
-    "cascadeTerminateToConfigurations": [
-      "[FRONTEND] appui-test-app/standalone (chrome)"
-    ]
-  },
-  { /* PARTIAL */
-    "name": "[FRONTEND] appui-test-app/standalone (chrome)",
-    "presentation": {
-      "hidden": true
+    { /* PARTIAL */
+      "name": "[FRONTEND] appui-test-app/standalone (chrome)",
+      "presentation": {
+        "hidden": true
+      },
+      "type": "pwa-chrome",
+      "request": "launch",
+      "url": "http://localhost:3000/",
+      "outFiles": [
+        "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/**/*.js",
+        "${workspaceFolder}/{core,clients,editor,ui,presentation}/*/lib/**/*.js"
+      ],
+      "cascadeTerminateToConfigurations": [
+        "[BACKEND] appui-test-app/standalone (chrome)"
+      ]
     },
-    "type": "pwa-chrome",
-    "request": "launch",
-    "url": "http://localhost:3000/",
-    "outFiles": [
-      "${workspaceFolder}/test-apps/appui-test-app/standalone/lib/**/*.js",
-      "${workspaceFolder}/{core,clients,editor,ui,presentation}/*/lib/**/*.js"
-    ],
-    "cascadeTerminateToConfigurations": [
-      "[BACKEND] appui-test-app/standalone (chrome)"
-    ]
-  },
-{ /* PARTIAL */
+    { /* PARTIAL */
       "name": "[BACKEND] appui-test-app/standalone (electron)",
       "presentation": {
         "hidden": true
@@ -1476,6 +1476,9 @@
       "type": "pwa-node",
       "request": "launch",
       "program": "${workspaceFolder}/core/electron/node_modules/mocha/bin/_mocha",
+      "args": [
+        "lib/cjs/test/backend/RunElectronBackendTests.js"
+      ],
       "env": {
         "NODE_ENV": "development"
       },
@@ -1553,28 +1556,28 @@
       ]
     },
     {
-    "name": "appui-test-app/connected (chrome)",
-    "presentation": {
-      "group": "1_TestApps",
-      "order": 1
+      "name": "appui-test-app/connected (chrome)",
+      "presentation": {
+        "group": "1_TestApps",
+        "order": 1
+      },
+      "configurations": [
+        "[BACKEND] appui-test-app/connected (chrome)",
+        "[FRONTEND] appui-test-app/connected (chrome)"
+      ]
     },
-    "configurations": [
-      "[BACKEND] appui-test-app/connected (chrome)",
-      "[FRONTEND] appui-test-app/connected (chrome)"
-    ]
-  },
-  {
-    "name": "appui-test-app/standalone (chrome)",
-    "presentation": {
-      "group": "1_TestApps",
-      "order": 1
+    {
+      "name": "appui-test-app/standalone (chrome)",
+      "presentation": {
+        "group": "1_TestApps",
+        "order": 1
+      },
+      "configurations": [
+        "[BACKEND] appui-test-app/standalone (chrome)",
+        "[FRONTEND] appui-test-app/standalone (chrome)"
+      ]
     },
-    "configurations": [
-      "[BACKEND] appui-test-app/standalone (chrome)",
-      "[FRONTEND] appui-test-app/standalone (chrome)"
-    ]
-  },
-  {
+    {
       "name": "appui-test-app/standalone (electron)",
       "presentation": {
         "group": "1_TestApps",
@@ -1585,7 +1588,7 @@
         "[FRONTEND] appui-test-app/standalone (electron)"
       ]
     },
-  {
+    {
       "name": "ui-test-app (chrome)",
       "presentation": {
         "group": "1_TestApps",
