test documentation changes

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,6 +2,7 @@
 #   Documentation for reference, https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
 
 # This is a comment.
+# This is a test comment.
 # Each line is a file pattern followed by one or more owners.
 
 # These owners will be the default owners for everything in
