--- a/common/config/azure-pipelines/templates/docs-build.yaml
+++ b/common/config/azure-pipelines/templates/docs-build.yaml
@@ -91,6 +91,10 @@ steps:
     inputs:
       versionSpec: 4.9.2
 
+  - script: |
+      echo $(Build.BuildNumber)
+      echo $BUILD_BUILDNUMBER
+
   - task: NuGetCommand@2
     displayName: 'NuGet pack'
     inputs:
