--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -9,6 +9,8 @@ parameters:
     default: 1
 
 steps:
+  - script: node common/scripts/set-rush-write-cache-variables.js
+    displayName: 'Set Rush Write Cache Variables'
   - script: node common/scripts/install-run-rush.js check
     displayName: rush check
     workingDirectory: ${{ parameters.workingDir }}
@@ -34,10 +36,7 @@ steps:
     env:
       RUSH_BUILD_CACHE_CREDENTIAL: $(RushBuildCacheSAS)
       RUSH_BUILD_CACHE_ENABLED: ${{parameters.rushBuildCacheEnabled}}
-      ${{ if eq(variables.shouldWriteToCache, true) }}:
-        RUSH_BUILD_CACHE_WRITE_ALLOWED: 1
-      ${{ else }}:
-        RUSH_BUILD_CACHE_WRITE_ALLOWED: 0
+
   - script: node common/scripts/install-run-rush.js build -v -p max
     displayName: rush build
     workingDirectory: ${{ parameters.workingDir }}
