--- a/common/config/azure-pipelines/jobs/regression-testing.yaml
+++ b/common/config/azure-pipelines/jobs/regression-testing.yaml
@@ -19,6 +19,12 @@ schedules:
 jobs:
   - template: ci-core.yaml
     parameters:
+      name: Node_18
+      nodeVersion: 18.x
+      pool:
+        demands: Agent.OS -equals $(platform)
+  - template: ci-core.yaml
+    parameters:
       name: Node_16
       nodeVersion: 16.x
       pool:
