try to get past invalid value for parameter 'key'

--- a/common/config/azure-pipelines/helgrind.yaml
+++ b/common/config/azure-pipelines/helgrind.yaml
@@ -3,6 +3,7 @@
 resources:
   repositories:
   - repository: buildscripts
+    type: git
     name: iModelTechnologies/imodeljs-build-pipeline-scripts
 
 
