Use same syntax for all parameters

--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -1,7 +1,6 @@
 parameters:
-  name: ''
-  pool: ''
-  nodeVersion: ''
+  - name: name
+  - name: pool
   - name: buildIos
     type: boolean
     default: false
