More parameter edits

--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -1,6 +1,10 @@
 parameters:
   - name: name
+    type: string
+    default: ''
   - name: pool
+    type: string
+    default: ''
   - name: buildIos
     type: boolean
     default: false
