Added nodeVersion back

--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -5,6 +5,9 @@ parameters:
   - name: pool
     type: string
     default: ''
+  - name: nodeVersion
+    type: string
+    default: ''
   - name: buildIos
     type: boolean
     default: false
