Another attempt at the correct parameters.

--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -1,16 +1,8 @@
 parameters:
-  - name: name
-    type: string
-    default: ''
-  - name: pool
-    type: string
-    default: ''
-  - name: nodeVersion
-    type: string
-    default: ''
-  - name: buildIos
-    type: boolean
-    default: false
+  name: ''
+  pool: ''
+  nodeVersion: ''
+  buildIos: false
 
 jobs:
 - job:
