--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -51,7 +51,7 @@ steps:
   - script: npm run build:ios build:ios-app
     workingDirectory: "test-apps/display-test-app"
     displayName: "Build iOS display-test-app swift"
-    condition: and(succeeded(), ${{ parameters.buildIos }}, eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Agent.OS'], 'Darwin'))
+    condition: and(succeeded(), eq('${{ parameters.buildIos }}',true), eq(variables['Build.Reason'], 'PullRequest'), eq(variables['Agent.OS'], 'Darwin'))
   - script: node common/scripts/install-run-rush.js lint
     displayName: rush lint
     workingDirectory: ${{ parameters.workingDir }}
