--- a/common/config/azure-pipelines/ci.yaml
+++ b/common/config/azure-pipelines/ci.yaml
@@ -23,10 +23,74 @@ schedules:
         - master
         - releases/*
 
+# jobs:
+#   - template: jobs/ci-core.yaml
+#     parameters:
+#       name: Node_16
+#       nodeVersion: 16.13.0
+#       pool:
+#         vmImage: $(OS)
+
 jobs:
+# - job:
+#   strategy:
+#     matrix:
+#       "Windows_Node_16":
+#         OS: windows-latest
+#         platform: Windows_NT
+#         name: $(win_pool)
+#       "Linux_${{ parameters.name }}":
+#         OS: ubuntu-latest
+#         platform: Linux
+#         name: $(linux_pool)
+#       "MacOS_${{ parameters.name }}":
+#         OS: macOS-latest
+#         platform: Darwin
+#         name: $(mac_pool)
+
+#   pool:
+#     vmImage: $(OS)
+
+#   timeoutInMinutes: 120
+
+#   workspace:
+#     clean: all
+
+#   steps:
+#   - template: jobs/ci-core.yaml
+#       parameters:
+#         nodeVersion: 16.13.0
+#         gitRepo: self
+#         gitBranch: master
+
+  - job: Windows
+    pool:
+      vmImage: windows-latest
+  steps:
   - template: jobs/ci-core.yaml
-    parameters:
-      name: Node_16
-      nodeVersion: 16.13.0
-      pool:
-        vmImage: $(OS)
+      parameters:
+        nodeVersion: 16.13.0
+        gitRepo: self
+        gitBranch: master
+
+  - job: Linux
+    pool:
+      vmImage: ubuntu-latest
+  steps:
+  - template: jobs/ci-core.yaml
+      parameters:
+        nodeVersion: 16.13.0
+        gitRepo: self
+        gitBranch: master
+
+  - job: Mac
+    pool:
+      vmImage: macOS-latest
+  steps:
+  - template: jobs/ci-core.yaml
+      parameters:
+        nodeVersion: 16.13.0
+        gitRepo: self
+        gitBranch: master
+
+
